Agregé un parrafo

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <h1>Esto es el titulo para una prueba</h1>
     
             <p>Acá va un parrafo que deveria de tener informacion interesante... ya se me va a ocurrir algo copado para colocar en esta seccion</p>
+            <p>Acá voy a colocar otro parrafo que va a hablar sobre de que se trata este proyecto</p>
         </div>
     </div>
 </body>
